--- a/styles.css
+++ b/styles.css
@@ -52,28 +52,48 @@ header {
     color: var(--text);
     line-height: 1.6;
   }
+
+  .card h3 {
+    margin-bottom: 0.25em;  /* tighten gap */
+  }
+  
+  .card .meta {
+    margin-top: 0;          /* remove extra space */
+    font-size: 0.9em;       /* optional: make meta smaller */
+    color: gray;            /* optional: style it like a subtitle */
+  }
+  
   
   html {
     scroll-padding-top: 7rem; /* leaves 7rem space at top */
   }
 
-  p{
+  para{
     text-indent:1.5rem;
+    display: block;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    margin-left: 0;
+    margin-right: 0;
   }
 
-  .about {
+  sectionHeader {
+    display: block;           /* make it behave like <h2> */
     position: relative;
     padding-bottom: 10px;
+    font-size: 40px;
   }
-  .about::after {
+  
+  sectionHeader::after {
     content: "";
     position: absolute;
     left: 0;
     bottom: 0;
-    width: 100%; 
-    height: 1px;                   /* line thickness */
-    background-color: rgb(255, 255, 255);       /* line color */
+    width: 100%;              /* stretch across */
+    height: 2px;              /* thickness */
+    background-color: white;  /* line color */
   }
+  
 
   .subtitle{
     position: relative;
